@@ -42,7 +42,7 @@ class FlashDirectoryResource(Resource):
         index_name = properties.get('index', 'index.html')
 
         root = mount_point
-        if root[-1] != "/":
+        if not root.endswith("/"):
             root += "/"
         if index_name != 'index.html':
             root = None
